<?xml version="1.0"?>
<package format="2">
  <name>rosparam_utilities</name>
  <version>0.0.0</version>
  <description>The rosparam_utilities package</description>

  <maintainer email="manuel.beschi@itia.cnr.it">Manuel Beschi</maintainer>

  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <build_depend>eigen</build_depend>

  <export>
  </export>
</package>
